k8s/nacos/sentinel-dashboard.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel
  namespace: sentinel
  labels:
    app: sentinel
spec:
  serviceName: sentinel
  replicas: 1
  selector:
    matchLabels:
      app: sentinel
  template:
    metadata:
      labels:
        app: sentinel
    spec:
      containers:
        - name: sentinel
          image: bladex/sentinel-dashboard:1.8.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 450m
              memory: 1Gi
            requests:
              cpu: 400m
              memory: 1Gi
          ports:
            - containerPort: 8858
              name: client
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel
  namespace: sentinel
  labels:
    app: sentinel
spec:
  type: ClusterIP
  ports:
    - port: 8858
      name: server
      targetPort: 8858
  selector:
    app: sentinel
