k8s/nacos/nacos-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nacos-gateway
  namespace: nacos
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nacos
  namespace: nacos
spec:
  hosts:
  - "nacos.local.com"
  gateways:
  - nacos-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nacos
        port:
          number: 8848
