k8s/nacos/sentinel-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sentinel-gateway
  namespace: sentinel
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sentinel
  namespace: sentinel
spec:
  hosts:
    - "sentinel.local.com"
  gateways:
    - sentinel-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: sentinel
            port:
              number: 8858
